--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    #write perms for the repo
+    permissions:
+      contents: write
+      
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
